# APR

./: CMakeLists.txt  Dockerfile  docker-compose.yml
include/: Amplifier.h  ClearConsole.h  FiberFunction.h  LosDetector.h  Node.h  NodeTest.h  OSC.h  Receiver.h  SocketConnection.h  Sockets.h
src/: Amplifier.cpp  LosDetector.cpp  Node.cpp  NodeTest.cpp  OSC.cpp  Receiver.cpp  SocketConnection.cpp  main.cpp
tests/: test.cpp
